--- a/combined_generative/combined_model.ipynb
+++ b/combined_generative/combined_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,20 +97,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/microsoft_hackthon/lib/python3.12/site-packages/sklearn/base.py:376: InconsistentVersionWarning: Trying to unpickle estimator LogisticRegression from version 1.2.2 when using version 1.5.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "c:\\Users\\Wanyi Dai\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\base.py:376: InconsistentVersionWarning: Trying to unpickle estimator LogisticRegression from version 1.2.2 when using version 1.5.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
       "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
       "  warnings.warn(\n",
-      "/opt/anaconda3/envs/microsoft_hackthon/lib/python3.12/site-packages/sklearn/base.py:376: InconsistentVersionWarning: Trying to unpickle estimator LogisticRegression from version 1.3.0 when using version 1.5.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "c:\\Users\\Wanyi Dai\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\base.py:376: InconsistentVersionWarning: Trying to unpickle estimator LogisticRegression from version 1.3.0 when using version 1.5.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
       "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
       "  warnings.warn(\n",
-      "/opt/anaconda3/envs/microsoft_hackthon/lib/python3.12/site-packages/sklearn/base.py:376: InconsistentVersionWarning: Trying to unpickle estimator LabelEncoder from version 1.3.0 when using version 1.5.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "c:\\Users\\Wanyi Dai\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\base.py:376: InconsistentVersionWarning: Trying to unpickle estimator LabelEncoder from version 1.3.0 when using version 1.5.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
       "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
       "  warnings.warn(\n"
      ]
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "int"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -156,73 +156,56 @@
      "output_type": "stream",
      "text": [
       "fast learner\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 82ms/step\n",
-      "Great! Let's create a structured study plan for your calculus midterms over the next week. Based on your status as a fast learner capable of multitasking and studying more than 4 hours per day, I'll structure your study plan accordingly.\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 16ms/step\n",
+      "Got it! Let's create a study plan for the next week focusing on calculus in mathematics. Since you are a fast learner and can dedicate 4 or more hours per day, we can create a plan that covers the major topics in calculus and includes some review and practice time.\n",
       "\n",
-      "### 7-Day Study Plan for Calculus Midterms\n",
+      "### Study Plan for 1 Week (Calculus)\n",
       "\n",
-      "#### Day 1: Functions and Limits\n",
-      "- **9:00 AM - 11:00 AM:** Review lecture notes and textbook chapters on Functions.\n",
-      "- **11:15 AM - 1:15 PM:** Practice problems on Functions.\n",
-      "- **1:15 PM - 2:15 PM:** Lunch/Break\n",
-      "- **2:15 PM - 4:15 PM:** Review lecture notes and textbook chapters on Limits.\n",
-      "- **4:30 PM - 6:30 PM:** Practice problems on Limits.\n",
-      "- **8:00 PM - 9:00 PM:** Review key concepts and make summary notes.\n",
+      "#### Day 1: Introduction to Calculus and Limits\n",
+      "- **1 hour**: Review the basics of calculus (definitions, theorems, and historical context).\n",
+      "- **1 hour**: Study limits and continuity (concepts, properties, and examples).\n",
+      "- **1 hour**: Solve limit problems (practice exercises).\n",
+      "- **1 hour**: Watch instructional videos on limits and continuity.\n",
       "\n",
-      "#### Day 2: Continuity and Derivatives\n",
-      "- **9:00 AM - 11:00 AM:** Study continuity from textbook and notes.\n",
-      "- **11:15 AM - 1:15 PM:** Practice problems on Continuity.\n",
-      "- **1:15 PM - 2:15 PM:** Lunch/Break\n",
-      "- **2:15 PM - 4:15 PM:** Review derivatives (rules, properties) from textbook and notes.\n",
-      "- **4:30 PM - 6:30 PM:** Practice derivative problems.\n",
-      "- **8:00 PM - 9:00 PM:** Create summary notes and flashcards on derivatives.\n",
+      "#### Day 2: Differentiation\n",
+      "- **1 hour**: Review derivatives (definition, rules, and applications).\n",
+      "- **1 hour**: Study differentiation techniques (product rule, quotient rule, chain rule).\n",
+      "- **1 hour**: Practice differentiation problems.\n",
+      "- **1 hour**: Watch instructional videos on differentiation techniques.\n",
       "\n",
-      "#### Day 3: Advanced Derivatives\n",
-      "- **9:00 AM - 11:00 AM:** Study higher-order derivatives (second derivative, etc.) and implicit differentiation.\n",
-      "- **11:15 AM - 1:15 PM:** Practice problems on advanced derivatives.\n",
-      "- **1:15 PM - 2:15 PM:** Lunch/Break\n",
-      "- **2:15 PM - 4:15 PM:** Study derivative applications: maxima, minima, and inflection points.\n",
-      "- **4:30 PM - 6:30 PM:** Practice application problems.\n",
-      "- **8:00 PM - 9:00 PM:** Review and summarize key concepts.\n",
+      "#### Day 3: Applications of Differentiation\n",
+      "- **1 hour**: Study applications of differentiation (tangent lines, velocity, acceleration).\n",
+      "- **1 hour**: Learn about optimization problems (maxima and minima of functions).\n",
+      "- **1 hour**: Practice problems on applications of differentiation.\n",
+      "- **1 hour**: Review past exam questions on differentiation applications.\n",
       "\n",
-      "#### Day 4: Integrals\n",
-      "- **9:00 AM - 11:00 AM:** Study indefinite integrals and anti-differentiation.\n",
-      "- **11:15 AM - 1:15 PM:** Practice problems on indefinite integrals.\n",
-      "- **1:15 PM - 2:15 PM:** Lunch/Break\n",
-      "- **2:15 PM - 4:15 PM:** Study definite integrals and the Fundamental Theorem of Calculus.\n",
-      "- **4:30 PM - 6:30 PM:** Practice problems on definite integrals.\n",
-      "- **8:00 PM - 9:00 PM:** Review overall integration techniques.\n",
+      "#### Day 4: Integration\n",
+      "- **1 hour**: Review integrals (definition, fundamental theorem of calculus).\n",
+      "- **1 hour**: Study techniques of integration (substitution, integration by parts).\n",
+      "- **1 hour**: Practice integration problems.\n",
+      "- **1 hour**: Watch instructional videos on integration techniques.\n",
       "\n",
-      "#### Day 5: Techniques of Integration\n",
-      "- **9:00 AM - 11:00 AM:** Study integration techniques: u-substitution, integration by parts.\n",
-      "- **11:15 AM - 1:15 PM:** Practice problems using u-substitution.\n",
-      "- **1:15 PM - 2:15 PM:** Lunch/Break\n",
-      "- **2:15 PM - 4:15 PM:** Practice problems using integration by parts.\n",
-      "- **4:30 PM - 6:30 PM:** Review lecture notes and practice additional problems.\n",
-      "- **8:00 PM - 9:00 PM:** Summary notes and flashcards on techniques.\n",
+      "#### Day 5: Applications of Integration\n",
+      "- **1 hour**: Study applications of integration (area under a curve, volumes of revolution).\n",
+      "- **1 hour**: Practice problems on applications of integration.\n",
+      "- **1 hour**: Review related rates and motion along a line.\n",
+      "- **1 hour**: Review past exam questions on integration applications.\n",
       "\n",
-      "#### Day 6: Practice and Review\n",
-      "- **9:00 AM - 11:00 AM:** Comprehensive problem-solving session (mixed topics).\n",
-      "- **11:15 AM - 1:15 PM:** Timed practice test covering all topics studied.\n",
-      "- **1:15 PM - 2:15 PM:** Lunch/Break\n",
-      "- **2:15 PM - 4:15 PM:** Review and correct mistakes from the practice test.\n",
-      "- **4:30 PM - 6:30 PM:** Summarize and consolidate weaker areas.\n",
-      "- **8:00 PM - 9:00 PM:** Relax and lightly review key concepts.\n",
+      "#### Day 6: Review and Practice\n",
+      "- **2 hours**: Comprehensive review of all topics covered (limits, differentiation, integration).\n",
+      "- **2 hours**: Solve practice problems and mock exams.\n",
       "\n",
-      "#### Day 7: Final Review and Relaxation\n",
-      "- **9:00 AM - 11:00 AM:** Go over summary notes, flashcards, and key formulae.\n",
-      "- **11:15 AM - 1:15 PM:** Light practice problems to keep concepts fresh.\n",
-      "- **1:15 PM - 2:15 PM:** Lunch/Break\n",
-      "- **2:15 PM - 4:15 PM:** Calm review session; meditate on key problems and their solutions.\n",
-      "- **4:30 PM - 6:30 PM:** Visualize the test scenario and mentally rehearse.\n",
-      "- **8:00 PM - 9:00 PM:** Relax, get plenty of rest, and ensure good sleep before the exam.\n",
+      "#### Day 7: Final Preparation\n",
+      "- **2 hours**: Final review of difficult topics and key concepts.\n",
+      "- **2 hours**: Take a full-length practice test under exam conditions.\n",
       "\n",
-      "### Tips:\n",
-      "1. **Breaks**: Ensure to take short breaks during your study sessions to avoid burnout.\n",
-      "2. **Healthy Eating**: Maintain a balanced diet to keep your brain functioning at its best.\n",
-      "3. **Sleep**: Aim for at least 7-8 hours of sleep each night.\n",
+      "### Additional Tips\n",
+      "- Take breaks between study sessions to avoid burnout.\n",
+      "- Use flashcards for important formulas and theorems.\n",
+      "- Join study groups or online forums to discuss challenging problems.\n",
+      "- Make sure to get enough sleep, eat well, and stay hydrated.\n",
       "\n",
-      "Good luck with your studies, and I hope you do great on your midterms!\n"
+      "This plan ensures you effectively cover all the necessary calculus topics and gives you ample time for practice and review. Good luck with your midterms!\n"
      ]
     }
    ],
@@ -343,18 +326,11 @@
     "study_plan = generate_study_plan(user_input)\n",
     "print(study_plan)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "microsoft_hackthon",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -368,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
